--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,6 @@
 @import '~bulma/bulma.sass';
+@import url('http://fonts.cdnfonts.com/css/harry-potter');
+
+body {
+  font-family: 'Harry Potter', sans-serif;
+}
