--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@ body {
   justify-content: space-around;
   margin-bottom: 10px;
   box-shadow: 5px 10px 10px #00000075;
+  min-width: 300px;
 
   h2 {
     font-size: 25px;
